1stAssignment/part4/ParTest.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParTest.y
-----------------------------------------------------------------------------

state 165 contains 1 shift/reduce conflicts.
state 175 contains 1 shift/reduce conflicts.
state 176 contains 1 shift/reduce conflicts.
state 177 contains 1 shift/reduce conflicts.
state 221 contains 2 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pListArg -> ListArg                         (3)
	%start_pArg -> Arg                                 (4)
	%start_pStm -> Stm                                 (5)
	%start_pElse -> Else                               (6)
	%start_pListStm -> ListStm                         (7)
	%start_pExp15 -> Exp15                             (8)
	%start_pExp14 -> Exp14                             (9)
	%start_pExp12 -> Exp12                             (10)
	%start_pExp11 -> Exp11                             (11)
	%start_pExp10 -> Exp10                             (12)
	%start_pExp8 -> Exp8                               (13)
	%start_pExp2 -> Exp2                               (14)
	%start_pListExp -> ListExp                         (15)
	%start_pExp -> Exp                                 (16)
	%start_pExp1 -> Exp1                               (17)
	%start_pExp3 -> Exp3                               (18)
	%start_pExp4 -> Exp4                               (19)
	%start_pExp5 -> Exp5                               (20)
	%start_pExp6 -> Exp6                               (21)
	%start_pExp7 -> Exp7                               (22)
	%start_pExp9 -> Exp9                               (23)
	%start_pExp13 -> Exp13                             (24)
	%start_pQualConst -> QualConst                     (25)
	%start_pTemplateInst -> TemplateInst               (26)
	%start_pListType -> ListType                       (27)
	%start_pType -> Type                               (28)
	%start_pLiteral -> Literal                         (29)
	%start_pListId -> ListId                           (30)
	Char -> L_charac                                   (31)
	Integer -> L_integ                                 (32)
	String -> L_quoted                                 (33)
	Float -> L_Float                                   (34)
	Id -> L_Id                                         (35)
	Program -> ListDef                                 (36)
	ListDef ->                                         (37)
	ListDef -> Def ListDef                             (38)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (39)
	Def -> 'inline' Type Id '(' ListArg ')' '{' ListStm '}'   (40)
	Def -> 'using' QualConst ';'                       (41)
	ListArg ->                                         (42)
	ListArg -> Arg                                     (43)
	ListArg -> Arg ',' ListArg                         (44)
	Arg -> Type                                        (45)
	Arg -> Type Id                                     (46)
	Arg -> Type Id '=' Exp                             (47)
	Stm -> Exp ';'                                     (48)
	Stm -> 'while' '(' Exp ')' Stm                     (49)
	Stm -> 'typedef' Type Id ';'                       (50)
	Stm -> '{' ListStm '}'                             (51)
	Stm -> 'if' '(' Exp ')' Stm                        (52)
	Stm -> 'if' '(' Exp ')' Stm Else                   (53)
	Stm -> 'return' Exp ';'                            (54)
	Stm -> 'return' ';'                                (55)
	Stm -> Type Id ';'                                 (56)
	Stm -> Type Id ',' ListId ';'                      (57)
	Stm -> Type Id '=' Exp ';'                         (58)
	Else -> 'elif' '(' Exp ')' Stm Else                (59)
	Else -> 'else' Stm                                 (60)
	ListStm ->                                         (61)
	ListStm -> Stm ListStm                             (62)
	Exp15 -> Literal                                   (63)
	Exp15 -> String Exp15                              (64)
	Exp15 -> QualConst                                 (65)
	Exp15 -> '(' Exp ')'                               (66)
	Exp14 -> Id '[' Exp ']'                            (67)
	Exp14 -> Id '(' ListExp ')'                        (68)
	Exp14 -> Exp15 '.' Exp14                           (69)
	Exp14 -> Exp15 '->' Exp14                          (70)
	Exp14 -> Exp15                                     (71)
	Exp12 -> Exp12 '*' Exp13                           (72)
	Exp12 -> Exp12 '/' Exp13                           (73)
	Exp12 -> Exp12 '%' Exp13                           (74)
	Exp12 -> Exp13                                     (75)
	Exp11 -> Exp11 '+' Exp12                           (76)
	Exp11 -> Exp11 '-' Exp12                           (77)
	Exp11 -> '-' Integer                               (78)
	Exp11 -> Exp12                                     (79)
	Exp10 -> Exp10 '>>' Exp11                          (80)
	Exp10 -> Exp10 '<<' Exp11                          (81)
	Exp10 -> Exp11                                     (82)
	Exp8 -> Exp8 '==' Exp9                             (83)
	Exp8 -> Exp8 '!=' Exp9                             (84)
	Exp8 -> Exp9                                       (85)
	Exp2 -> Exp3 '=' Exp2                              (86)
	Exp2 -> Exp3 '+=' Exp2                             (87)
	Exp2 -> Exp3 '-=' Exp2                             (88)
	Exp2 -> Exp2 '?' Exp2 ':' Exp3                     (89)
	Exp2 -> Exp3                                       (90)
	ListExp ->                                         (91)
	ListExp -> Exp                                     (92)
	ListExp -> Exp ',' ListExp                         (93)
	Exp -> Exp1                                        (94)
	Exp1 -> Exp2                                       (95)
	Exp3 -> Exp4                                       (96)
	Exp4 -> Exp5                                       (97)
	Exp5 -> Exp6                                       (98)
	Exp6 -> Exp7                                       (99)
	Exp7 -> Exp8                                       (100)
	Exp9 -> Exp10                                      (101)
	Exp13 -> Exp14                                     (102)
	QualConst -> Id                                    (103)
	QualConst -> QualConst '::' Id                     (104)
	QualConst -> QualConst '::' TemplateInst           (105)
	TemplateInst -> Id '<' ListType '>'                (106)
	ListType ->                                        (107)
	ListType -> Type                                   (108)
	ListType -> Type ',' ListType                      (109)
	Type -> 'int'                                      (110)
	Type -> 'bool'                                     (111)
	Type -> 'char'                                     (112)
	Type -> 'double'                                   (113)
	Type -> 'void'                                     (114)
	Type -> QualConst                                  (115)
	Type -> Type '&'                                   (116)
	Type -> 'const' Type                               (117)
	Literal -> Integer                                 (118)
	Literal -> String                                  (119)
	Literal -> Char                                    (120)
	Literal -> Float                                   (121)
	ListId -> Id                                       (122)
	ListId -> Id ',' ListId                            (123)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'%'            { PT _ (TS _ 2) }
	'&'            { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	'+='           { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'-='           { PT _ (TS _ 11) }
	'->'           { PT _ (TS _ 12) }
	'.'            { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	'::'           { PT _ (TS _ 16) }
	';'            { PT _ (TS _ 17) }
	'<'            { PT _ (TS _ 18) }
	'<<'           { PT _ (TS _ 19) }
	'='            { PT _ (TS _ 20) }
	'=='           { PT _ (TS _ 21) }
	'>'            { PT _ (TS _ 22) }
	'>>'           { PT _ (TS _ 23) }
	'?'            { PT _ (TS _ 24) }
	'['            { PT _ (TS _ 25) }
	']'            { PT _ (TS _ 26) }
	'bool'         { PT _ (TS _ 27) }
	'char'         { PT _ (TS _ 28) }
	'const'        { PT _ (TS _ 29) }
	'double'       { PT _ (TS _ 30) }
	'elif'         { PT _ (TS _ 31) }
	'else'         { PT _ (TS _ 32) }
	'if'           { PT _ (TS _ 33) }
	'inline'       { PT _ (TS _ 34) }
	'int'          { PT _ (TS _ 35) }
	'return'       { PT _ (TS _ 36) }
	'typedef'      { PT _ (TS _ 37) }
	'using'        { PT _ (TS _ 38) }
	'void'         { PT _ (TS _ 39) }
	'while'        { PT _ (TS _ 40) }
	'{'            { PT _ (TS _ 41) }
	'}'            { PT _ (TS _ 42) }
	L_charac       { PT _ (TC $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_Float        { PT _ (T_Float $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pListArg rule  3
	%start_pArg     rule  4
	%start_pStm     rule  5
	%start_pElse    rule  6
	%start_pListStm rule  7
	%start_pExp15   rule  8
	%start_pExp14   rule  9
	%start_pExp12   rule  10
	%start_pExp11   rule  11
	%start_pExp10   rule  12
	%start_pExp8    rule  13
	%start_pExp2    rule  14
	%start_pListExp rule  15
	%start_pExp     rule  16
	%start_pExp1    rule  17
	%start_pExp3    rule  18
	%start_pExp4    rule  19
	%start_pExp5    rule  20
	%start_pExp6    rule  21
	%start_pExp7    rule  22
	%start_pExp9    rule  23
	%start_pExp13   rule  24
	%start_pQualConst rule  25
	%start_pTemplateInst rule  26
	%start_pListType rule  27
	%start_pType    rule  28
	%start_pLiteral rule  29
	%start_pListId  rule  30
	Char            rule  31
	Integer         rule  32
	String          rule  33
	Float           rule  34
	Id              rule  35
	Program         rule  36
	ListDef         rules 37, 38
	Def             rules 39, 40, 41
	ListArg         rules 42, 43, 44
	Arg             rules 45, 46, 47
	Stm             rules 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58
	Else            rules 59, 60
	ListStm         rules 61, 62
	Exp15           rules 63, 64, 65, 66
	Exp14           rules 67, 68, 69, 70, 71
	Exp12           rules 72, 73, 74, 75
	Exp11           rules 76, 77, 78, 79
	Exp10           rules 80, 81, 82
	Exp8            rules 83, 84, 85
	Exp2            rules 86, 87, 88, 89, 90
	ListExp         rules 91, 92, 93
	Exp             rule  94
	Exp1            rule  95
	Exp3            rule  96
	Exp4            rule  97
	Exp5            rule  98
	Exp6            rule  99
	Exp7            rule  100
	Exp9            rule  101
	Exp13           rule  102
	QualConst       rules 103, 104, 105
	TemplateInst    rule  106
	ListType        rules 107, 108, 109
	Type            rules 110, 111, 112, 113, 114, 115, 116, 117
	Literal         rules 118, 119, 120, 121
	ListId          rules 122, 123

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         shift, and enter state 47
	'char'         shift, and enter state 48
	'const'        shift, and enter state 49
	'double'       shift, and enter state 50
	'inline'       shift, and enter state 117
	'int'          shift, and enter state 51
	'using'        shift, and enter state 118
	'void'         shift, and enter state 52
	L_Id           shift, and enter state 35
	%eof           reduce using rule 37

	Id             goto state 44
	Program        goto state 121
	ListDef        goto state 122
	Def            goto state 120
	QualConst      goto state 45
	Type           goto state 116

State 1

	%start_pListDef -> . ListDef                        (rule 1)

	'bool'         shift, and enter state 47
	'char'         shift, and enter state 48
	'const'        shift, and enter state 49
	'double'       shift, and enter state 50
	'inline'       shift, and enter state 117
	'int'          shift, and enter state 51
	'using'        shift, and enter state 118
	'void'         shift, and enter state 52
	L_Id           shift, and enter state 35
	%eof           reduce using rule 37

	Id             goto state 44
	ListDef        goto state 119
	Def            goto state 120
	QualConst      goto state 45
	Type           goto state 116

State 2

	%start_pDef -> . Def                                (rule 2)

	'bool'         shift, and enter state 47
	'char'         shift, and enter state 48
	'const'        shift, and enter state 49
	'double'       shift, and enter state 50
	'inline'       shift, and enter state 117
	'int'          shift, and enter state 51
	'using'        shift, and enter state 118
	'void'         shift, and enter state 52
	L_Id           shift, and enter state 35

	Id             goto state 44
	Def            goto state 115
	QualConst      goto state 45
	Type           goto state 116

State 3

	%start_pListArg -> . ListArg                        (rule 3)

	'bool'         shift, and enter state 47
	'char'         shift, and enter state 48
	'const'        shift, and enter state 49
	'double'       shift, and enter state 50
	'int'          shift, and enter state 51
	'void'         shift, and enter state 52
	L_Id           shift, and enter state 35
	%eof           reduce using rule 42

	Id             goto state 44
	ListArg        goto state 113
	Arg            goto state 114
	QualConst      goto state 45
	Type           goto state 112

State 4

	%start_pArg -> . Arg                                (rule 4)

	'bool'         shift, and enter state 47
	'char'         shift, and enter state 48
	'const'        shift, and enter state 49
	'double'       shift, and enter state 50
	'int'          shift, and enter state 51
	'void'         shift, and enter state 52
	L_Id           shift, and enter state 35

	Id             goto state 44
	Arg            goto state 111
	QualConst      goto state 45
	Type           goto state 112

State 5

	%start_pStm -> . Stm                                (rule 5)

	'('            shift, and enter state 65
	'-'            shift, and enter state 71
	'bool'         shift, and enter state 47
	'char'         shift, and enter state 48
	'const'        shift, and enter state 49
	'double'       shift, and enter state 50
	'if'           shift, and enter state 102
	'int'          shift, and enter state 51
	'return'       shift, and enter state 103
	'typedef'      shift, and enter state 104
	'void'         shift, and enter state 52
	'while'        shift, and enter state 105
	'{'            shift, and enter state 106
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	L_Float        shift, and enter state 43
	L_Id           shift, and enter state 35

	Char           goto state 36
	Integer        goto state 37
	String         goto state 58
	Float          goto state 39
	Id             goto state 59
	Stm            goto state 110
	Exp15          goto state 60
	Exp14          goto state 61
	Exp12          goto state 66
	Exp11          goto state 67
	Exp10          goto state 68
	Exp8           goto state 72
	Exp2           goto state 83
	Exp            goto state 99
	Exp1           goto state 87
	Exp3           goto state 85
	Exp4           goto state 82
	Exp5           goto state 80
	Exp6           goto state 78
	Exp7           goto state 76
	Exp9           goto state 74
	Exp13          goto state 70
	QualConst      goto state 100
	Type           goto state 101
	Literal        goto state 64

State 6

	%start_pElse -> . Else                              (rule 6)

	'elif'         shift, and enter state 108
	'else'         shift, and enter state 109

	Else           goto state 107

State 7

	%start_pListStm -> . ListStm                        (rule 7)

	'('            shift, and enter state 65
	'-'            shift, and enter state 71
	'bool'         shift, and enter state 47
	'char'         shift, and enter state 48
	'const'        shift, and enter state 49
	'double'       shift, and enter state 50
	'if'           shift, and enter state 102
	'int'          shift, and enter state 51
	'return'       shift, and enter state 103
	'typedef'      shift, and enter state 104
	'void'         shift, and enter state 52
	'while'        shift, and enter state 105
	'{'            shift, and enter state 106
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	L_Float        shift, and enter state 43
	L_Id           shift, and enter state 35
	%eof           reduce using rule 61

	Char           goto state 36
	Integer        goto state 37
	String         goto state 58
	Float          goto state 39
	Id             goto state 59
	Stm            goto state 97
	ListStm        goto state 98
	Exp15          goto state 60
	Exp14          goto state 61
	Exp12          goto state 66
	Exp11          goto state 67
	Exp10          goto state 68
	Exp8           goto state 72
	Exp2           goto state 83
	Exp            goto state 99
	Exp1           goto state 87
	Exp3           goto state 85
	Exp4           goto state 82
	Exp5           goto state 80
	Exp6           goto state 78
	Exp7           goto state 76
	Exp9           goto state 74
	Exp13          goto state 70
	QualConst      goto state 100
	Type           goto state 101
	Literal        goto state 64

State 8

	%start_pExp15 -> . Exp15                            (rule 8)

	'('            shift, and enter state 65
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	L_Float        shift, and enter state 43
	L_Id           shift, and enter state 35

	Char           goto state 36
	Integer        goto state 37
	String         goto state 58
	Float          goto state 39
	Id             goto state 44
	Exp15          goto state 96
	QualConst      goto state 63
	Literal        goto state 64

State 9

	%start_pExp14 -> . Exp14                            (rule 9)

	'('            shift, and enter state 65
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	L_Float        shift, and enter state 43
	L_Id           shift, and enter state 35

	Char           goto state 36
	Integer        goto state 37
	String         goto state 58
	Float          goto state 39
	Id             goto state 59
	Exp15          goto state 60
	Exp14          goto state 95
	QualConst      goto state 63
	Literal        goto state 64

State 10

	%start_pExp12 -> . Exp12                            (rule 10)

	'('            shift, and enter state 65
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	L_Float        shift, and enter state 43
	L_Id           shift, and enter state 35

	Char           goto state 36
	Integer        goto state 37
	String         goto state 58
	Float          goto state 39
	Id             goto state 59
	Exp15          goto state 60
	Exp14          goto state 61
	Exp12          goto state 94
	Exp13          goto state 70
	QualConst      goto state 63
	Literal        goto state 64

State 11

	%start_pExp11 -> . Exp11                            (rule 11)

	'('            shift, and enter state 65
	'-'            shift, and enter state 71
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	L_Float        shift, and enter state 43
	L_Id           shift, and enter state 35

	Char           goto state 36
	Integer        goto state 37
	String         goto state 58
	Float          goto state 39
	Id             goto state 59
	Exp15          goto state 60
	Exp14          goto state 61
	Exp12          goto state 66
	Exp11          goto state 93
	Exp13          goto state 70
	QualConst      goto state 63
	Literal        goto state 64

State 12

	%start_pExp10 -> . Exp10                            (rule 12)

	'('            shift, and enter state 65
	'-'            shift, and enter state 71
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	L_Float        shift, and enter state 43
	L_Id           shift, and enter state 35

	Char           goto state 36
	Integer        goto state 37
	String         goto state 58
	Float          goto state 39
	Id             goto state 59
	Exp15          goto state 60
	Exp14          goto state 61
	Exp12          goto state 66
	Exp11          goto state 67
	Exp10          goto state 92
	Exp13          goto state 70
	QualConst      goto state 63
	Literal        goto state 64

State 13

	%start_pExp8 -> . Exp8                              (rule 13)

	'('            shift, and enter state 65
	'-'            shift, and enter state 71
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	L_Float        shift, and enter state 43
	L_Id           shift, and enter state 35

	Char           goto state 36
	Integer        goto state 37
	String         goto state 58
	Float          goto state 39
	Id             goto state 59
	Exp15          goto state 60
	Exp14          goto state 61
	Exp12          goto state 66
	Exp11          goto state 67
	Exp10          goto state 68
	Exp8           goto state 91
	Exp9           goto state 74
	Exp13          goto state 70
	QualConst      goto state 63
	Literal        goto state 64

State 14

	%start_pExp2 -> . Exp2                              (rule 14)

	'('            shift, and enter state 65
	'-'            shift, and enter state 71
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	L_Float        shift, and enter state 43
	L_Id           shift, and enter state 35

	Char           goto state 36
	Integer        goto state 37
	String         goto state 58
	Float          goto state 39
	Id             goto state 59
	Exp15          goto state 60
	Exp14          goto state 61
	Exp12          goto state 66
	Exp11          goto state 67
	Exp10          goto state 68
	Exp8           goto state 72
	Exp2           goto state 90
	Exp3           goto state 85
	Exp4           goto state 82
	Exp5           goto state 80
	Exp6           goto state 78
	Exp7           goto state 76
	Exp9           goto state 74
	Exp13          goto state 70
	QualConst      goto state 63
	Literal        goto state 64

State 15

	%start_pListExp -> . ListExp                        (rule 15)

	'('            shift, and enter state 65
	'-'            shift, and enter state 71
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	L_Float        shift, and enter state 43
	L_Id           shift, and enter state 35
	%eof           reduce using rule 91

	Char           goto state 36
	Integer        goto state 37
	String         goto state 58
	Float          goto state 39
	Id             goto state 59
	Exp15          goto state 60
	Exp14          goto state 61
	Exp12          goto state 66
	Exp11          goto state 67
	Exp10          goto state 68
	Exp8           goto state 72
	Exp2           goto state 83
	ListExp        goto state 88
	Exp            goto state 89
	Exp1           goto state 87
	Exp3           goto state 85
	Exp4           goto state 82
	Exp5           goto state 80
	Exp6           goto state 78
	Exp7           goto state 76
	Exp9           goto state 74
	Exp13          goto state 70
	QualConst      goto state 63
	Literal        goto state 64

State 16

	%start_pExp -> . Exp                                (rule 16)

	'('            shift, and enter state 65
	'-'            shift, and enter state 71
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	L_Float        shift, and enter state 43
	L_Id           shift, and enter state 35

	Char           goto state 36
	Integer        goto state 37
	String         goto state 58
	Float          goto state 39
	Id             goto state 59
	Exp15          goto state 60
	Exp14          goto state 61
	Exp12          goto state 66
	Exp11          goto state 67
	Exp10          goto state 68
	Exp8           goto state 72
	Exp2           goto state 83
	Exp            goto state 86
	Exp1           goto state 87
	Exp3           goto state 85
	Exp4           goto state 82
	Exp5           goto state 80
	Exp6           goto state 78
	Exp7           goto state 76
	Exp9           goto state 74
	Exp13          goto state 70
	QualConst      goto state 63
	Literal        goto state 64

State 17

	%start_pExp1 -> . Exp1                              (rule 17)

	'('            shift, and enter state 65
	'-'            shift, and enter state 71
	L_charac       shift, and enter state 32
	L_integ        shift, and enter state 41
	L_quoted       shift, and enter state 42
	L_Float        shift, and enter state 43
	L_Id           shift, and enter state 35
